manifests/uptime-kuma/deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: uptime-kuma
      app.kubernetes.io/name: uptime-kuma
  serviceName: uptime-kuma
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: uptime-kuma
        app.kubernetes.io/name: uptime-kuma
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      automountServiceAccountToken: false
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
      containers:
      - name: uptime-kuma
        image: quay.io/k3rnel-pan1c/uptime-kuma:1.23.16
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
        resources:
          requests:
            cpu: 20m
            memory: 120Mi
          limits:
            # cpu: 600m
            memory: 500Mi        
        ports:
        - containerPort: 3001
          name: http
          protocol: TCP
        livenessProbe:
          exec:
            command:
            - extra/healthcheck
          failureThreshold: 3
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/data
          name: uptime-storage
      securityContext:
        fsGroup: 2000
      terminationGracePeriodSeconds: 30
      volumes:
      - name: uptime-storage
        persistentVolumeClaim:
          claimName: nfs-uptime-kuma
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
