manifests/uptime-kuma/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: uptime-kuma
#   namespace: uptime-kuma
# spec:
#   internalTrafficPolicy: Cluster
#   ports:
#   - name: http
#     port: 80
#     protocol: TCP
#     targetPort: http
#   selector:
#     app.kubernetes.io/instance: uptime-kuma
#     app.kubernetes.io/name: uptime-kuma
#   sessionAffinity: None
#   type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: "cloud-mariadb.tailb7050.ts.net"
  labels:
    tailscale.com/proxy-class: "run-on-worker"  
  name: home-egress
  namespace: uptime-kuma
spec:
  externalName: home-egress
  type: ExternalName
